--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nguyenthanhnhan28092003@gmail.com
-spring.mail.password=ddzyzqdcqfxrydha
+spring.mail.username=**
+spring.mail.password=**
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
